WebSocket Cors Fix #9